# Semra-OpenCode

poc-semralatest/: BackupDockerfile  Dockerfile  README.md  app.py  gitlab-ci.yml  pyproject.toml  requirements.txt  run.py  run.sh  runProject.bat  setupProject.bat
poc-semralatest/server/config/: settings.json
poc-semralatest/server/data/: adour_et_gaves.json  aude_ariege.json  bugs_ou_ameliorations.json  grille_envoi_edf.json  grille_envoi_tiers.json  plan_application.json  pyrenees.json  sei_corse.json  tarn_agout.json  tiers.json
poc-semralatest/server/static/: main_page.css  navbar.css
poc-semralatest/server/static/css/: adour_et_gaves.css  aude_ariege.css  bugs_ou_ameliorations.css  config_editor.css  grille_envoi_edf.css  plan_application.css  pyrenees.css  sei_corse.css  tarn_agout.css  tiers.css  workflow_modals.css
poc-semralatest/server/static/forms/: form1.css
poc-semralatest/server/static/js/: adour_et_gaves.js  aude_ariege.js  bugs_ou_ameliorations.js  config_editor.js  grille_envoi_edf.js  grille_envoi_tiers.js  initial_modal.js  mail_recipients.js  mail_workflow.js  main_page.js  navbar.js  plan_application.js  pyrenees.js  sei_corse.js  tarn_agout.js  tiers.js
poc-semralatest/server/templates/: adour_et_gaves.html  aude_ariege.html  bugs_ou_ameliorations.html  config.html  grille_envoi_edf.html  grille_envoi_tiers.html  liste_ouvrages.html  main_page.html  plan_application.html  pyrenees.html  sei_corse.html  tarn_agout.html  tiers.html
